<resources>
    <string name="app_name">Работа ЖД вокзала</string>
    <string name="button2">Добавить в БД</string>
    <string name="button3">Удалить</string>
    <string name="button5">Войти</string>
    <string name="button6">Посмотреть расписание</string>
    <string name="update">Обновить</string>
    <string name="delete">Удалить</string>
    //календарь
    <string name="textView1">Войти</string>
    <string name="textView2">Выберите дату</string>
    <string name="textView34">Поезд</string>
    <string name="textView35">Маршрут</string>
    <string name="textView36">Прибытие</string>
    <string name="textView37">Отправление</string>
    <string name="textView38">Путь</string>
    <string name="textView39">Платформа</string>
    //кассир
    <string name="button8">Международный билет</string>
    <string name="button7">Региональный билет</string>
    <string name="button9">Смотреть базу данных</string>
    <string name="textView3">ДОБАВИТЬ</string>
    <string name="button10">Добавить</string>
    <string name="add_button">Добавить</string>
    <string name="View_Button">Просмотреть</string>
    <string name="header">Список пуст</string>

    <string name="textView4">ДОБАВИТЬ</string>
    //Диспетчер
    <string name="button11">Пассажирский состав</string>
    <string name="button12">Грузовой состав</string>
    <string name="radioButton1">Региональные билеты</string>
    <string name="radioButton2">Международные билеты</string>
    //Вывод информации по грузовым поездам
    <string name="textView5">Состав</string>
    <string name="textView8">Маршрут</string>
    <string name="textView17">День</string>
    <string name="textView18">Прибытие</string>
    <string name="textView19">Отправление</string>
    <string name="textView20">Груз</string>
    <string name="textView21">Масса груза</string>
    <string name="textView22">Ценность</string>
    <string name="textView23">Доб. вагонов</string>
    <string name="textView24">Отцепл. вагонов</string>

    //Вывод инф-ии по региональным билетам
    <string name="text1">Билет</string>
    <string name="text2">Класс вагона</string>
    <string name="text3">Номер поезда</string>
    <string name="text4">Льгота</string>
    <string name="text5">Стоимость</string>

    //Вывод информации по международным билетам
    <string name="textView">Билет</string>
    <string name="textView7">Имя</string>
    <string name="textView10">Фамилия</string>
    <string name="textView11">Отчество</string>
    <string name="textView13">Паспорт</string>
    <string name="textView9">Номер поезда</string>
    <string name="textView12">Класс вагона</string>
    <string name="textView14">Вагон</string>
    <string name="textView15">Место</string>
    <string name="textView16">Стоимость</string>

    //Вывод информации по пассажирским составам
    <string name="textView25">Состав</string>
    <string name="textView26">Маршрут</string>
    <string name="textView27">День</string>
    <string name="textView28">Прибытие</string>
    <string name="textView29">Отправление</string>
    <string name="textView30">Путь</string>
    <string name="textView31">Платформа</string>
    <string name="textView32">Вагонов</string>
    <string name="textView33">Мест</string>

    //Создать PDF
    <string name="button13">Создать PDF</string>

</resources>