<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateOut">

    <ScrollView
        android:layout_width="324dp"
        android:layout_height="600dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/UPPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textView7"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="65dp" />

            <EditText
                android:id="@+id/UPPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textView10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="10dp" />

            <EditText
                android:id="@+id/UPPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textView11"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="120dp" />

            <EditText
                android:id="@+id/UPPassport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textView13"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="175dp" />

            <EditText
                android:id="@+id/UPTrainOutside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textView9"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="230dp" />

            <EditText
                android:id="@+id/UPTicketOutside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textView"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="285dp" />

            <EditText
                android:id="@+id/UPWagonClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textView12"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="340dp" />

            <EditText
                android:id="@+id/UPWagon"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:ems="10"
                android:hint="@string/textView14"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="395dp" />

            <EditText
                android:id="@+id/UPSeat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/textView15"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="395dp" />

            <EditText
                android:id="@+id/UPPriceOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textView16"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/UPOut"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/update"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="519dp" />

            <Button
                android:id="@+id/DeleteOut"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/delete"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="588dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>