<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/button9"
        android:layout_width="233dp"
        android:layout_height="69dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="89dp"
        android:text="@string/button9"
        android:onClick="ShowTickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="233dp"
        android:layout_height="69dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="89dp"
        android:text="@string/button7"
        android:onClick="addInsideTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="233dp"
        android:layout_height="69dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="89dp"
        android:text="@string/button8"
        android:onClick="addOutsideTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="115dp"
        android:text="@string/textView3"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>