<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView5"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/textView17"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView18"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView19"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView20"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView21"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView22"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView23"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView24"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <TextView
                android:id="@+id/CaTrain_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/textView5"
                android:textColor="#007ABB"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/CaMarshrut_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:text="@string/textView8"
                android:textColor="#007ABB"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/CaTrain_txt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/CaDay_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="98dp"
                android:layout_marginTop="24dp"
                android:text="@string/textView17"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/CaTrain_txt" />

            <TextView
                android:id="@+id/CaPribil_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView18"
                app:layout_constraintStart_toEndOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/CaDay_txt" />

            <TextView
                android:id="@+id/CaYedet_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView19"
                app:layout_constraintStart_toEndOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/CaPribil_txt" />

            <TextView
                android:id="@+id/Cargo_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="107dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView20"
                app:layout_constraintStart_toEndOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/CaYedet_txt" />

            <TextView
                android:id="@+id/CaWeight_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView21"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/Cargo_txt" />

            <TextView
                android:id="@+id/CaPrice_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView22"
                app:layout_constraintStart_toEndOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/CaWeight_txt" />

            <TextView
                android:id="@+id/CaAdd_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="47dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView23"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/CaPrice_txt" />

            <TextView
                android:id="@+id/CaAddnt_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView24"
                app:layout_constraintStart_toEndOf="@+id/textView24"
                app:layout_constraintTop_toBottomOf="@+id/CaAdd_txt" />

            <TextView
                android:id="@+id/CaID_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="31dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>