<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView25"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/textView27"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView28"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView31"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView32"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <TextView
                android:id="@+id/ChTrain_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/textView25"
                android:textColor="#007ABB"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView25"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ChMarshrut_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginBottom="54dp"
                android:text="@string/textView26"
                android:textColor="#007ABB"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/ChPribil_txt"
                app:layout_constraintStart_toEndOf="@+id/ChTrain_txt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ChDay_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="71dp"
                android:layout_marginTop="24dp"
                android:text="@string/textView27"
                app:layout_constraintStart_toEndOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/ChTrain_txt" />

            <TextView
                android:id="@+id/ChPribil_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView28"
                app:layout_constraintStart_toEndOf="@+id/textView28"
                app:layout_constraintTop_toBottomOf="@+id/ChDay_txt" />

            <TextView
                android:id="@+id/ChYedet_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView29"
                app:layout_constraintStart_toEndOf="@+id/textView29"
                app:layout_constraintTop_toBottomOf="@+id/ChPribil_txt" />

            <TextView
                android:id="@+id/ChWay_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView30"
                app:layout_constraintStart_toEndOf="@+id/textView30"
                app:layout_constraintTop_toBottomOf="@+id/ChYedet_txt" />

            <TextView
                android:id="@+id/ChPlatform_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView31"
                app:layout_constraintStart_toEndOf="@+id/textView31"
                app:layout_constraintTop_toBottomOf="@+id/ChWay_txt" />

            <TextView
                android:id="@+id/ChVagonov_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView32"
                app:layout_constraintStart_toEndOf="@+id/textView32"
                app:layout_constraintTop_toBottomOf="@+id/ChPlatform_txt" />

            <TextView
                android:id="@+id/ChMest_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="71dp"
                android:layout_marginTop="10dp"
                android:text="@string/textView33"
                app:layout_constraintStart_toEndOf="@+id/textView33"
                app:layout_constraintTop_toBottomOf="@+id/ChVagonov_txt" />

            <TextView
                android:id="@+id/ChID_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>