<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OperMenu1">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="470dp"
        android:layout_height="781dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24"
        app:srcCompat="@drawable/train_wallpaper" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="115dp"
        android:text="@string/textView3"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="233dp"
        android:layout_height="69dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/button_pressed"
        android:onClick="CreateChedule"
        android:text="@string/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button12"
        android:layout_width="233dp"
        android:layout_height="69dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/button_pressed"
        android:onClick="AddCargoTrain"
        android:text="@string/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

</androidx.constraintlayout.widget.ConstraintLayout>